--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
           <li class="bigtext">+7 905 108 88 86</li>
           <li>+7 962 355 51 02</li>
           <li>welldig@yandex.ru</li>
+          <li><a href="https://yandex.ru/uslugi/profile/MikhailS-909867">Профиль в Яндекс Услуги</a></li>
           <li class="toptext">Иваново, Дзержинского, 39 (БЦ GrayHouse)</li>
           <li>Кострома, Ленина, 10 (БЦ Старый Город)</li>
         </ul>
