Сделал телефоны кликабельными в index.html

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           </small>
           <ul class="list">
             <li class="ref">Звоните</li>
-            <li class="textnomber">+7 905 108 88 86</li>
-            <li class="grey">+7 962 355 51 02</li>
+            <li class="textnomber"><a href="tel:+79051088886">+7 905 108 88 86</a></li>
+            <li class="grey"><a href="tel:+79623555102">+7 962 355 51 02</a></li>
           </ul>
         </header>
       </div>
@@ -118,8 +118,8 @@
       <div class="wrapper">
         <div class="blurry"></div>
         <ul class="col background">
-          <li class="bigtext">+7 905 108 88 86</li>
-          <li>+7 962 355 51 02</li>
+          <li class="bigtext"><a href="tel:+79051088886">+7 905 108 88 86</a></li>
+          <li><a href="tel:+79623555102">+7 962 355 51 02</a></li>
           <li>welldig@yandex.ru</li>
           <li><a href="https://yandex.ru/uslugi/profile/MikhailS-909867">Профиль в Яндекс Услуги</a></li>
           <li class="toptext">Иваново, Дзержинского, 39 (БЦ GrayHouse)</li>
