--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
           </div><div class="col service">
             <img src="img/manip.jpg" alt="Монтаж колодец" />
             <p>Доставка манипулятором</p>
+          </div><div class="col service">
+            <img src="img/wood.jpg" alt="Монтаж колодец" />
+            <p>Донные фильтры под заказ</p>
           </div>
 
         </div>
