--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>    
-    <meta name="robots" content="index, follow"/>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://kolodtsev-dom.ru">
+    <meta name="robots" content="noindex, nofollow"/>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Копка колодцев в Ивановской и Костромской области</title>
